// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesnt render the spinner when not loading 1`] = `
<div>
  Content
</div>
`;

exports[`renders a small inline spinner 1`] = `
<div>
  <div
    class="wrapper inline"
  >
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
    />
    <div
      class=""
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="spinner small inline"
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`renders the inline spinner 1`] = `
<div>
  <div
    class="wrapper inline"
  >
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
    />
    <div
      class=""
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="spinner inline"
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`renders the small spinner 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
    />
    <div
      class="overlay"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="spinner small"
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`renders the spinner 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
    />
    <div
      class="overlay"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="spinner"
        role="alert"
      />
    </div>
  </div>
</div>
`;

exports[`renders the spinner with content 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div
      aria-busy="true"
      aria-hidden="true"
      aria-live="polite"
    >
      Content
    </div>
    <div
      class="overlay"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="spinner"
        role="alert"
      />
    </div>
  </div>
</div>
`;
